--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<header>
 		<nav>
 			<ul class="bold2">
-				<li><a href="#">Գլխավոր</a></li>
-				<li><a href="#">Հարցում</a></li>
-				<li><a href="#">Կրթության որակի չափորոշիչներ</a></li>
+				<li><a href="index.html">Գլխավոր</a></li>
+				<li><a href="index.html">Հարցում</a></li>
+				<li><a href="index.html">Կրթության որակի չափորոշիչներ</a></li>
 			</ul>
 		</nav>
 	</header>
