--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li><a href="#">✎.Հոգեբանական</a></li>
 				<li><a href="#">✍.Մասնագիտական</a></li>
 		</ul>
-			<h1>Կրթության որակի կառավարման արդյունավետ մեխանիզմները տեղեկատվական տեխնոլոգիաների կիրառմամբ</h1><br><br><br>
+			<h1>SYUZANNA</h1><br><br><br>
 			<p>
 		Այս նկատառումներով առանձնացվել են մշտադիտարկման (մոնիթորինգի) հետևյալ օբյեկտները՝ սպառողների պահանջների արդիականացման ծրագրում, ծառայությունների մատուցման գործընթացի նախագծում, ծառայությունների իրականացում, արդյունքի ապահովում և որակի գնահատում, մատուցվող ծառայություններից բավարարվածության մակարդակի բարձրացում:<br>
 		Ներկայումս «լավ կառավարման» սկզբունքներով կառավարության գործունեության արդիականացումը հիմնականում պայմանավորված է գիտելիքը կառավարող կրթական արժեքների (համալսարաններ, գիտահետազոտական վերլուծական կենտրոններ, ակադեմիաներ) համակարգերի արդյունավետ գործառմամբ: Եթե համեմատության մեջ դիտարկենք զարգացած և զարգացող երկրների կառավարության գործունեության արդիականացումը, ապա ակնհայտ է դառնում, որ գիտելիքի վերափոխված դերակատարությունը, նպաստելով ժողովրդավարության որակի բարձրացմանը, պատճառ է դառնում նաև կառավարության արդիականացմանը: Նշվածից այսօր արդեն ակնհայտ է տեղեկատվական դարաշրջանի դերակատարների կարգավիճակը, հատկապես «ոսկե միլիարդի» տնօրինած պաշարներն ապացուցում են Ու. Չերչիլի այն մարգարեությունը, որ «ապագայի կայսրությունը մտքի և գիտելիքի կայսրությունն է»:
